# hakuraku

./: .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile.agent  Dockerfile.server  INSTALLATION.md  LICENSE  README.md  TODO.md  docker-compose.swarm.yml  docker-compose.yml  openapi.yaml
.cargo/: config.toml
.github/workflows/: test.yml
k8s/: postgres.yaml  pulse-agent.yaml  pulse-server.yaml  victoriametrics.yaml
pulse-agent/: Cargo.toml
pulse-agent/src/: buffer.rs  collector.rs  main.rs  prober.rs
pulse-core/: Cargo.toml
pulse-core/proto/: telemetry.proto
pulse-core/src/: auth.rs  error.rs  lib.rs
pulse-server/: Cargo.toml
pulse-server/migrations/: 001_init.sql
pulse-server/src/: api.rs  db.rs  grpc.rs  integrity_tests.rs  main.rs  metrics.rs  state.rs  ws.rs
