[workspace]
resolver = "2"
members = [
    "pulse-core",
    "pulse-agent",
    "pulse-server",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/example/pulse"

# ─── Shared dependency versions ───────────────────────────────────────────────

[workspace.dependencies]
# Async runtime
tokio = { version = "1", default-features = false }

# gRPC / Protobuf
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"

# HTTP / REST / WebSocket
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower_governor = "0.8"

sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "migrate"] }

# HTTP Client (VictoriaMetrics client)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Metrics / Observability
prometheus = { version = "0.13", features = ["process"] }

# Tokio Utilities for graceful shutdown
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto / Auth
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
dashmap = "6"

# ─── Release profile: size-optimized with full LTO ───────────────────────────

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 0
