[package]
name = "pulse-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-throughput ingestion API and dashboard server for 伯楽 (Hakuraku)."

[dependencies]
pulse-core = { path = "../pulse-core" }

# Async runtime
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "net",
    "time",
    "signal",
    "macros",
    "sync",
] }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# HTTP / REST / WebSocket
axum = { workspace = true }
tower = { workspace = true, features = ["timeout"] }
tower-http = { workspace = true }
tower_governor = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Concurrent map
dashmap = { workspace = true }

# HTTP client & Metrics
reqwest = { workspace = true }
prometheus = { workspace = true }
tokio-util = { workspace = true }

# Streaming
tokio-stream = "0.1"
futures = "0.3"
